--- a/10_iteratorComposite.ipynb
+++ b/10_iteratorComposite.ipynb
@@ -12,10 +12,10 @@
     "\n",
     "## I.1 소개\n",
     "\n",
-    "* Iterator 패턴 Behavioral Design Pattern\n",
-    "* Collection은 Array, List, Hashtable, Stack 등 여러 방식으로 구현할 수 있다.\n",
-    "* 이런 경우, Collection에 따라 읽는 방법이 서로 다로 다르게 되는데, 이를 일관되게 만드는 패턴.\n",
-    "* 읽는 방식Iteration을 은익:\n",
+    "* Iterator패턴은 Behavioral Design Pattern\n",
+    "* Collection은 Array, List, Hashtable, Stack 등 여러 방식으로 구현될 수 있다.\n",
+    "* 이런 경우 Collection의 성격에 따라 API가 서로 다르게 된다. Iterator패턴은 이를 일관되게 만들어 준다.\n",
+    "* 데이터요소를 읽는 방식을 은익:\n",
     "    * \"provides a way to access the elements of an aggregate object sequentially without exposing in underlying representation\"\n",
     "    * 서로 다른 인터페이스를 동일하게 변환 Polymorphic traversal\n",
     "    * adpater pattern과 비교 - behavioral pattern"
@@ -56,14 +56,14 @@
     "다음 항목이 있는지 확인 | hasMoreElements() | hasNext()\n",
     "다음 항목 가져오기 | nextElement() | next()\n",
     "\n",
-    "    * 과제\n",
-    "        * case extension\n",
-    "            * 자신의 메뉴 (한글로) 3개 추가\n",
-    "                * vegetarian true\n",
-    "                * iterator.dinermenu.after\n",
-    "            * 위 MenuItem에 대해 ArrayListIterator, ArrayIterator 구현, test하기.\n",
-    "        * new case\n",
-    "            * composite iterator - 커피메뉴 추가\n"
+    "* 과제\n",
+    "    * case extension\n",
+    "        * 자신의 메뉴 (한글로) 3개 추가\n",
+    "            * vegetarian true\n",
+    "            * iterator.dinermenu.after\n",
+    "        * 위 MenuItem에 대해 ArrayListIterator, ArrayIterator 구현, test하기.\n",
+    "    * new case\n",
+    "        * composite iterator - 커피메뉴 추가\n"
    ]
   },
   {
@@ -76,8 +76,7 @@
    "source": [
     "## I.2. 문제\n",
     "\n",
-    "* 사용하려는 객체의 API가 서로 다름.\n",
-    "    * 예: ArrayList, Array데이터를 읽는 방식이 서로 다름.\n",
+    "* 객체의 API가 서로 다르다. 예: ArrayList, Array\n",
     "\n",
     "ArrayList | Array\n",
     "---|---\n",
@@ -86,8 +85,7 @@
     "ArrayList는 size(),  get(i) | Array는 length, [i] (인덱스방식) (p.323)\n",
     "PancakeHouseMenu는 ArrayList |DinerMenus는 Array (MenuItem[])\n",
     "\n",
-    "\n",
-    "* Iterator를 사용하지 않고 ArrayList, Array를 for-loop이용해서 출력하면, 서로 다른 API로 인해 중복이 발생하게 된다.\n"
+    "* Iterator를 사용하지 않고 ArrayList, Array를 사용하면, 서로 다른 API로 인해 중복이 발생하게 된다.\n"
    ]
   },
   {
@@ -367,9 +365,9 @@
     "## I.3 설계\n",
     "\n",
     "* Single Responsibility\n",
-    "    * A class should have **only one** reason to change\n",
-    "    * High Cohesion - 높은 응집성이란 한 가지 목적만 수행하는 것.\n",
-    "    * 서로 다른 기능을 한 클래스에 넣어 놓으면, 한 기능이 바뀔 때 (무관한) 다른 기능도 따라서 변경관리해주어야 한다.\n",
+    "    * 클래스는 여러 기능 보다는 그 목적에 부합한 기능만을 구현하도록 해야 한다.\n",
+    "    * 즉 클래스는 응집성이 높아야 한다 (High Cohesion).\n",
+    "    * 응집성이 낮은 여러 기능을 한 클래스에 넣어 놓으면, 어떤 기능이 변경될 경우 (무관한) 다른 기능도 따라서 변경관리가 필요하게 된다.\n",
     "    * 'Collection'과 'iteration'를 분리, 즉 '저장'과 '읽기'를 분리한다.\n",
     "* Iteration\n",
     "    * next() 다음 항목 가져오기\n",
@@ -417,54 +415,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Composite 패턴\n",
     "\n",
     "* Composite 패턴은 Structural Design Pattern\n",
     "* \"to compose objects into tree structures to represent part-whole hierarchies.\"\n",
-    "* iterator와 결합하여 composite iterator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg height=\"401px\" style=\"width:441px;height:401px;\" version=\"1.1\" viewBox=\"0 0 441 401\" width=\"441px\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"><defs><filter height=\"300%\" id=\"f1\" width=\"300%\" x=\"-1\" y=\"-1\"><feGaussianBlur result=\"blurOut\" stdDeviation=\"2.0\"/><feColorMatrix in=\"blurOut\" result=\"blurOut2\" type=\"matrix\" values=\"0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 .4 0\"/><feOffset dx=\"4.0\" dy=\"4.0\" in=\"blurOut2\" result=\"blurOut3\"/><feBlend in=\"SourceGraphic\" in2=\"blurOut3\" mode=\"normal\"/></filter></defs><g><polygon fill=\"#FFFFFF\" filter=\"url(#f1)\" points=\"242,32,307,32,314,54.2969,434,54.2969,434,287.5,242,287.5,242,32\" style=\"stroke: #000000; stroke-width: 2.0;\"/><line style=\"stroke: #000000; stroke-width: 2.0;\" x1=\"242\" x2=\"314\" y1=\"54.2969\" y2=\"54.2969\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"59\" x=\"246\" y=\"46.9951\">Iterator</text><polygon fill=\"#FFFFFF\" filter=\"url(#f1)\" points=\"22,174,112,174,119,196.2969,210,196.2969,210,394,22,394,22,174\" style=\"stroke: #000000; stroke-width: 2.0;\"/><line style=\"stroke: #000000; stroke-width: 2.0;\" x1=\"22\" x2=\"119\" y1=\"196.2969\" y2=\"196.2969\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"14\" font-weight=\"bold\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"84\" x=\"26\" y=\"188.9951\">Composite</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"73.6094\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"115\" x=\"285.5\" y=\"75\"/><ellipse cx=\"316.25\" cy=\"91\" fill=\"#B4A7E5\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M312.1719,86.7656 L312.1719,84.6094 L319.5625,84.6094 L319.5625,86.7656 L317.0938,86.7656 L317.0938,94.8438 L319.5625,94.8438 L319.5625,97 L312.1719,97 L312.1719,94.8438 L314.6406,94.8438 L314.6406,86.7656 L312.1719,86.7656 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" font-style=\"italic\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"48\" x=\"333.75\" y=\"95.1543\">Iterator</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"286.5\" x2=\"399.5\" y1=\"107\" y2=\"107\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"286.5\" x2=\"399.5\" y1=\"115\" y2=\"115\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"103\" x=\"291.5\" y=\"129.2104\">hasNext():boolean</text><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"72\" x=\"291.5\" y=\"142.0151\">next():Object</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"48\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"136\" x=\"274\" y=\"215.5\"/><ellipse cx=\"289\" cy=\"231.5\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M291.9688,237.1406 Q291.3906,237.4375 290.75,237.5859 Q290.1094,237.7344 289.4063,237.7344 Q286.9063,237.7344 285.5859,236.0859 Q284.2656,234.4375 284.2656,231.3125 Q284.2656,228.1875 285.5859,226.5313 Q286.9063,224.875 289.4063,224.875 Q290.1094,224.875 290.7578,225.0313 Q291.4063,225.1875 291.9688,225.4844 L291.9688,228.2031 Q291.3438,227.625 290.75,227.3516 Q290.1563,227.0781 289.5313,227.0781 Q288.1875,227.0781 287.5,228.1484 Q286.8125,229.2188 286.8125,231.3125 Q286.8125,233.4063 287.5,234.4766 Q288.1875,235.5469 289.5313,235.5469 Q290.1563,235.5469 290.75,235.2734 Q291.3438,235 291.9688,234.4219 L291.9688,237.1406 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"104\" x=\"303\" y=\"235.6543\">ConcreteIterator</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"275\" x2=\"409\" y1=\"247.5\" y2=\"247.5\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"275\" x2=\"409\" y1=\"255.5\" y2=\"255.5\"/><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"60.8047\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"98\" x=\"67\" y=\"209\"/><ellipse cx=\"82\" cy=\"225\" fill=\"#B4A7E5\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M77.9219,220.7656 L77.9219,218.6094 L85.3125,218.6094 L85.3125,220.7656 L82.8438,220.7656 L82.8438,228.8438 L85.3125,228.8438 L85.3125,231 L77.9219,231 L77.9219,228.8438 L80.3906,228.8438 L80.3906,220.7656 L77.9219,220.7656 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" font-style=\"italic\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"66\" x=\"96\" y=\"229.1543\">Aggregate</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"68\" x2=\"164\" y1=\"241\" y2=\"241\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"68\" x2=\"164\" y1=\"249\" y2=\"249\"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"11\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"86\" x=\"73\" y=\"263.2104\">createIterator()</text><rect fill=\"#FEFECE\" filter=\"url(#f1)\" height=\"48\" style=\"stroke: #A80036; stroke-width: 1.5;\" width=\"155\" x=\"38.5\" y=\"330\"/><ellipse cx=\"53.5\" cy=\"346\" fill=\"#ADD1B2\" rx=\"11\" ry=\"11\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M56.4688,351.6406 Q55.8906,351.9375 55.25,352.0859 Q54.6094,352.2344 53.9063,352.2344 Q51.4063,352.2344 50.0859,350.5859 Q48.7656,348.9375 48.7656,345.8125 Q48.7656,342.6875 50.0859,341.0313 Q51.4063,339.375 53.9063,339.375 Q54.6094,339.375 55.2578,339.5313 Q55.9063,339.6875 56.4688,339.9844 L56.4688,342.7031 Q55.8438,342.125 55.25,341.8516 Q54.6563,341.5781 54.0313,341.5781 Q52.6875,341.5781 52,342.6484 Q51.3125,343.7188 51.3125,345.8125 Q51.3125,347.9063 52,348.9766 Q52.6875,350.0469 54.0313,350.0469 Q54.6563,350.0469 55.25,349.7734 Q55.8438,349.5 56.4688,348.9219 L56.4688,351.6406 Z \"/><text fill=\"#000000\" font-family=\"sans-serif\" font-size=\"12\" lengthAdjust=\"spacingAndGlyphs\" textLength=\"123\" x=\"67.5\" y=\"350.1543\">ConcreteAggregate</text><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"39.5\" x2=\"192.5\" y1=\"362\" y2=\"362\"/><line style=\"stroke: #A80036; stroke-width: 1.5;\" x1=\"39.5\" x2=\"192.5\" y1=\"370\" y2=\"370\"/><path d=\"M342.55,169.507 C342.421,185.674 342.288,202.399 342.185,215.333 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 7.0,7.0;\"/><polygon fill=\"none\" points=\"335.552,169.243,342.711,149.3,349.551,169.355,335.552,169.243\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M116,290.107 C116,303.876 116,318.1847 116,329.6686 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 7.0,7.0;\"/><polygon fill=\"none\" points=\"109,290.058,116,270.058,123,290.058,109,290.058\" style=\"stroke: #A80036; stroke-width: 1.0;\"/><path d=\"M291.076,265.849 C252.408,285.098 199.678,311.3463 162.218,329.9933 \" fill=\"none\" style=\"stroke: #A80036; stroke-width: 1.0; stroke-dasharray: 7.0,7.0;\"/><polygon fill=\"#A80036\" points=\"295.72,263.538,285.8806,263.9689,291.2442,265.7666,289.4464,271.1302,295.72,263.538\" style=\"stroke: #A80036; stroke-width: 1.0;\"/></g></svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%plantuml\n",
-    "@startuml\n",
-    "package \"Iterator\" {\n",
-    "    interface Iterator {\n",
-    "        hasNext():boolean\n",
-    "        next():Object\n",
-    "    }\n",
-    "    Iterator <|.. ConcreteIterator\n",
-    "}\n",
-    "package \"Composite\" {\n",
-    "    interface Aggregate {\n",
-    "        createIterator()\n",
-    "    }\n",
-    "    Aggregate <|.. ConcreteAggregate\n",
-    "}\n",
-    "ConcreteAggregate .left.> ConcreteIterator\n",
-    "@enduml"
+    "* iterator와 결합하여 'composite iterator'"
    ]
   },
   {
@@ -1054,18 +1015,17 @@
    "source": [
     "## 6.2 Menu Composite\n",
     "\n",
-    "* Menu Composite Iterator - Stack\n",
-    "    * java.util.Vector 상속\n",
-    "    * peek() - pop하지 않고 조회만 함.\n",
-    "    * Iterable 구현\n",
-    "* UnsupportedOperationException"
+    "* 메뉴를 composite패턴을 적용하여 구현한다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1325,7 +1285,10 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1346,7 +1309,10 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1410,7 +1376,10 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1447,9 +1416,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "* composite iterator\n",
+    "* Menu Composite Iterator\n",
+    "    * Stack을 사용하여 Iterable 구현\n",
+    "    * Stack은 java.util.Vector를 상속하고, pop(), push(), peek() 등의 기능을 제공한다.\n",
+    "    * peek() - pop하지 않고 조회만 함.\n",
+    "    * 지원하지 안는 기능은 'UnsupportedOperationException'\n",
     "    * recursive"
    ]
   },
@@ -1457,7 +1434,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
