--- a/hello_sql.ipynb
+++ b/hello_sql.ipynb
@@ -312,8 +312,17 @@
     "\n",
     "* 파일 기반의 데이터베이스이다.\n",
     "* 서버 기능이 없다.\n",
-    "* 모바일과 같이 가벼운 환경에서 사용하기 편리하다.\n",
-    "\n",
+    "* 모바일과 같이 가벼운 환경에서 사용하기 편리하다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### S.3.1 설치\n",
     "\n",
     "* sqlite 사이트 http://www.sqlite.org/\n",
@@ -330,7 +339,7 @@
     "\n",
     "* Sqlite jdbc driver 설치\n",
     "    * 공식적인 jdbc driver가 없다.\n",
-    "    * http://www.xerial.org 에서 다운로드 설치 'sqlite-jdbc.jar'\n"
+    "    * http://www.xerial.org 에서 다운로드 설치 'sqlite-jdbc.jar'"
    ]
   },
   {
@@ -882,7 +891,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "source": [
     "* connection url"
@@ -894,7 +906,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -1047,8 +1059,17 @@
     "\n",
     "* 서버를 설치하여 원격으로 사용할 수 있다.\n",
     "* 오픈 소스이고 PHP, C, Java, Python 등 여러 언어에서 지원하고 있다.\n",
-    "* 대규모의 데이터를 처리할 수 있다.\n",
-    "\n",
+    "* 대규모의 데이터를 처리할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### S.4.1 설치\n",
     "\n",
     "#### S.4.1.1 Linux\n",
@@ -1231,21 +1252,22 @@
     }
    },
    "source": [
-    "### S.4.3 mysql cli\n",
+    "### S.4.3 MySql cli\n",
     "\n",
     "* mysql cli에 접속하려면 host, user, password를 넘겨준다.\n",
+    "\n",
     "```\n",
     "mysql [-h hostname] [-u user_name] [-p your_pass]\n",
     "```\n",
     "\n",
     "* sample\n",
+    "\n",
     "```\n",
     "$ mysql -u root -p\n",
     "mysql> use test;\n",
     "mysql> show tables;\n",
     "또는 test를 만들 경우\n",
     "mysql> CREATE DATABASE test;\n",
-    "\n",
     "```"
    ]
   },
@@ -1260,6 +1282,7 @@
     "* sql 명령문을 작성한다.\n",
     "* 또는 source 명령어를 사용한다.\n",
     "    * 현재 디렉토리에서 명령문을 읽어온다.\n",
+    "\n",
     "```\n",
     "$ cd ~/Code/git/sd/src\n",
     "mysql> source j_11_db_test.sql\n",
@@ -1566,7 +1589,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1594,7 +1620,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1617,7 +1646,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [],
    "source": [
@@ -1628,7 +1660,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -1655,7 +1690,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "* 권한 변경이 되었는지 확인한다."
    ]
@@ -1664,7 +1703,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
    },
    "outputs": [
     {
@@ -1724,7 +1766,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
