--- a/hello_sql.ipynb
+++ b/hello_sql.ipynb
@@ -1098,7 +1098,7 @@
     "#### S.4.1.2 윈도우\n",
     "\n",
     "* https://dev.mysql.com/downloads/installer/\n",
-    "* 자신의 컴퓨터에 맞는 버전을 선택하여 설치"
+    "* 자신의 컴퓨터에 맞는 버전을 선택하여 설치\n"
    ]
   },
   {
@@ -1109,23 +1109,11 @@
     }
    },
    "source": [
-    "* 실행\n",
-    "    * 서버 실행 mysqld\n",
-    "    * 서버 관리 mysqladmin (server admin)\n",
-    "    * 클라이언트 (사용자 계정은 root)\n",
+    "* Linux에서 서버 실행 (윈도우에서도 '서비스(로컬)'를 사용하여 서버를 실행한다.)\n",
     "```\n",
-    "mysql -u root -p (client)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
+    "service mysql start|stop\n",
+    "```\n",
+    "\n",
     "* mysql server의 실행되고 있는지 확인하려면:\n",
     "    * ubuntu\n",
     "```\n",
@@ -1141,6 +1129,23 @@
     "$ sudo /etc/init.d/mysql restart\n",
     "$ vim /etc/mysql/my.cnf\n",
     "$ sudo mysqladmin status -p\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "    * 클라이언트 (사용자 계정은 root)\n",
+    "```\n",
+    "mysql -u root -p (client)\n",
     "```"
    ]
   },
