--- a/hello_sql.ipynb
+++ b/hello_sql.ipynb
@@ -212,7 +212,11 @@
    },
    "source": [
     "* 단계 3: driver 등록\n",
-    "    * Class.forName()\n",
+    "    * Class.forName() 해당하는 클래스를 register하고, 로딩하는 기능이다.\n",
+    "    * JDBC 내부적으로 DriverManager.registerDriver()를 호출하므로, 직접 호출하지 않아도 된다.\n",
+    "    * JDBC 4.0 (Java 6) 이후, DriverManager가 ServiceLoader를 사용하여 classpath에서 해당하는 driver를 찾는다. 따라서 Class.forName()를 사용하여 직접 로딩하지 않아도, 해당하는 클래스가 로딩된다.\n",
+    "\n",
+    "    * (1) Class.forName()\n",
     "```\n",
     "try {\n",
     "   Class.forName(\"com.mysql.jdbc.Driver\");\n",
@@ -223,7 +227,7 @@
     "}\n",
     "```\n",
     "\n",
-    "    * Driver class\n",
+    "    * (2) Driver class\n",
     "```\n",
     "try {\n",
     "   Driver myDriver = new com.mysql.jdbc.Driver();\n",
@@ -793,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -828,34 +832,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " String sqliteDriver=\"org.sqlite.JDBC\";\r\n",
-      "|  Added variable sqliteDriver of type String with initial value \"org.sqlite.JDBC\"\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "String sqliteDriver=\"org.sqlite.JDBC\";"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -867,23 +846,22 @@
      "text": [
       " import java.sql.*;\r\n",
       "\r\n",
+      " String sqliteDriver=\"org.sqlite.JDBC\";\r\n",
+      "|  Modified variable sqliteDriver of type String with initial value \"org.sqlite.JDBC\"\r\n",
+      "|    Update overwrote variable sqliteDriver\r\n",
+      "\r\n",
       " \r\n",
       "\r\n",
       " Class.forName(sqliteDriver);\r\n",
-      "|  java.lang.ClassNotFoundException thrown: org.sqlite.JDBC\r\n",
-      "|        at URLClassLoader.findClass (URLClassLoader.java:384)\r\n",
-      "|        at RemoteClassLoader.findClass (RemoteClassLoader.java:54)\r\n",
-      "|        at ClassLoader.loadClass (ClassLoader.java:486)\r\n",
-      "|        at ClassLoader.loadClass (ClassLoader.java:419)\r\n",
-      "|        at Class.forName0 (Native Method)\r\n",
-      "|        at Class.forName (Class.java:294)\r\n",
-      "|        at (#12:1)\r\n",
+      "|  Expression value is: class org.sqlite.JDBC\r\n",
+      "|    assigned to temporary variable $11 of type Class<?>\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
     "import java.sql.*;\n",
+    "String sqliteDriver=\"org.sqlite.JDBC\";\n",
     "\n",
     "Class.forName(sqliteDriver);"
    ]
@@ -902,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -914,8 +892,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " String _db = \"./src/ds_sql_hello_jdbc.db\";\r\n",
-      "|  Modified variable _db of type String with initial value \"./src/ds_sql_hello_jdbc.db\"\r\n",
+      " String _db = \"./src/ds_sql_hello.db\";\r\n",
+      "|  Modified variable _db of type String with initial value \"./src/ds_sql_hello.db\"\r\n",
       "|    Update overwrote variable _db\r\n",
       "\r\n",
       " String _jdbc = \"jdbc:sqlite\";\r\n",
@@ -923,21 +901,21 @@
       "|    Update overwrote variable _jdbc\r\n",
       "\r\n",
       " String _url = _jdbc + \":\" + _db;\r\n",
-      "|  Modified variable _url of type String with initial value \"jdbc:sqlite:./src/ds_sql_hello_jdbc.db\"\r\n",
+      "|  Modified variable _url of type String with initial value \"jdbc:sqlite:./src/ds_sql_hello.db\"\r\n",
       "|    Update overwrote variable _url\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "String _db = \"./src/ds_sql_hello_jdbc.db\";\n",
+    "String _db = \"./src/ds_sql_hello.db\";\n",
     "String _jdbc = \"jdbc:sqlite\";\n",
     "String _url = _jdbc + \":\" + _db;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -950,7 +928,7 @@
      "output_type": "stream",
      "text": [
       " Connection c = DriverManager.getConnection(_url);\r\n",
-      "|  Modified variable c of type Connection with initial value org.sqlite.SQLiteConnection@543e710e\r\n",
+      "|  Modified variable c of type Connection with initial value org.sqlite.SQLiteConnection@5427c60c\r\n",
       "|    Update overwrote variable c\r\n",
       "\r\n"
      ]
@@ -1012,8 +990,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* sqlite cli\n",
+    "    * 테이블 목록 .tables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "customer   jumun      orderItem  product  \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sqlite3 src/ds_sql_hello.db '.tables'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1025,26 +1035,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "COMPANY\r\n"
+      "1|Kim\r\n"
      ]
     }
    ],
    "source": [
-    "!sqlite3 src/ds_sql_hello_jdbc.db '.tables'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!sqlite3 src/ds_sql_hello_jdbc.db 'select * from COMPANY'"
+    "!sqlite3 src/ds_sql_hello.db 'select * from customer'"
    ]
   },
   {
@@ -1133,15 +1129,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "    * 클라이언트 (사용자 계정은 root)\n",
     "```\n",
@@ -1895,6 +1889,7 @@
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
