--- a/12_dao.ipynb
+++ b/12_dao.ipynb
@@ -499,7 +499,8 @@
    "source": [
     "List a = new ArrayList()\n",
     "a.add(\"a\")\n",
-    "a.get(0)\n"
+    "a.get(0)\n",
+    "a.remove(0)"
    ]
   },
   {
@@ -553,10 +554,12 @@
     "import java.util.List;\n",
     "\n",
     "public interface PersonDao {\n",
-    "    public List<Person> getAllPersons();\n",
-    "    public Person getPerson(int id);\n",
-    "    public void updatePerson(Person p);\n",
-    "    public void deletePerson(Person p);\n",
+    "    public void insert(Person p);\n",
+    "    public List<Person> findAll();\n",
+    "    public Person findById(int id);\n",
+    "    public void update(Person p);\n",
+    "    public void delete(int id);\n",
+    "    public void delete(Person p);\n",
     "}\n"
    ]
   },
@@ -580,24 +583,26 @@
     "    List<Person> persons;\n",
     "    public PersonDaoImpl() {\n",
     "        persons = new ArrayList<Person>();\n",
-    "        Person p1 = new Person(0,\"js1\");\n",
-    "        Person p2 = new Person(1,\"js2\");\n",
-    "        persons.add(p1);\n",
-    "        persons.add(p2);           \n",
     "    }\n",
-    "    public void deletePerson(Person p) {\n",
-    "        persons.remove(p.getId());\n",
-    "        System.out.println(\"deleting... \"+p.getId());\n",
+    "    public void insert(Person p) {\n",
+    "        persons.add(p);\n",
     "    }\n",
-    "    public List<Person> getAllPersons() {\n",
+    "    public List<Person> findAll() {\n",
     "        return persons;\n",
     "    }\n",
-    "    public Person getPerson(int rollNo) {\n",
-    "        return persons.get(rollNo);\n",
+    "    public Person findById(int id) {\n",
+    "        return persons.get(id);\n",
     "    }\n",
-    "    public void updatePerson(Person person) {\n",
-    "        persons.get(person.getId()).setName(person.getName());\n",
-    "        System.out.println(\"updating... \"+person.getId());\n",
+    "    public void update(Person p) {\n",
+    "        persons.get(p.getId()).setName(p.getName());\n",
+    "        System.out.println(\"updating... \"+p.getId());\n",
+    "    }\n",
+    "    public void delete(int id) {\n",
+    "        persons.remove(id);\n",
+    "    }\n",
+    "    public void delete(Person p) {\n",
+    "        persons.remove(p.getId());\n",
+    "        System.out.println(\"deleting... \"+p.getId());\n",
     "    }\n",
     "}\n"
    ]
@@ -617,21 +622,37 @@
     "package com.sd.dao.v1;\n",
     "\n",
     "public class DaoMainV1 {\n",
-    "   public static void main(String[] args) {\n",
-    "      PersonDao personDao = new PersonDaoImpl();\n",
-    "      System.out.println(\"--- listing all...\");\n",
-    "      for (Person person:personDao.getAllPersons()) {\n",
-    "         System.out.println(\"reading... \"+person.getId() +\", \"+person.getName());\n",
-    "      }\n",
+    "    public static void main(String[] args) {\n",
+    "        Person p;\n",
+    "        PersonDao personDao = new PersonDaoImpl();\n",
     "\n",
-    "      System.out.println(\"--- updating...\");\n",
-    "      Person person =personDao.getAllPersons().get(0);\n",
-    "      person.setName(\"js new\");\n",
-    "      personDao.updatePerson(person);\n",
+    "        System.out.println(\"--- inserting...\");\n",
+    "        p = new Person(0, \"js1\");\n",
+    "        personDao.insert(p);\n",
+    "        p = new Person(1, \"js2\");\n",
+    "        personDao.insert(p);\n",
     "\n",
-    "      System.out.println(\"--- see if updated...\");\n",
-    "      personDao.getPerson(0);\n",
-    "      System.out.println(person.getId() +\", \"+person.getName());\n",
+    "        System.out.println(\"--- finding all...\");\n",
+    "        for (Person pi:personDao.findAll()) {\n",
+    "            System.out.println(\"reading... \"+pi.getId() +\", \"+pi.getName());\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\"--- updating...\");\n",
+    "        p =personDao.findAll().get(0);\n",
+    "        p.setName(\"js new\");\n",
+    "        personDao.update(p);\n",
+    "\n",
+    "        System.out.println(\"--- see if updated...\");\n",
+    "        p=personDao.findById(0);\n",
+    "        System.out.println(p.getId() +\", \"+p.getName());\n",
+    "\n",
+    "        System.out.println(\"--- deleting...\");\n",
+    "        personDao.delete(0);\n",
+    "\n",
+    "        System.out.println(\"--- finding all after deleting...\");\n",
+    "        for (Person pi:personDao.findAll()) {\n",
+    "            System.out.println(\"reading... \"+pi.getId() +\", \"+pi.getName());\n",
+    "        }\n",
     "   }\n",
     "}\n"
    ]
