--- a/12_dao.ipynb
+++ b/12_dao.ipynb
@@ -277,6 +277,20 @@
     }
    },
    "source": [
+    "구분 | CREATE TABLE 문 | 설명\n",
+    "-----|-----|-----\n",
+    "MySql | CREATE TABLE persons(id int(64) NOT NULL AUTO_INCREMENT,<br>name varchar(255) NOT NULL,<br>address varchar(255) NOT NULL, UNIQUE (id)); | AUTO_INCREMENT를 사용\n",
+    "Sqlite | CREATE TABLE persons(id int(64) NULL,<br>name varchar(255) NOT NULL,<br>address varchar(255) NOT NULL, UNIQUE (id)); |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "단계 | 설명\n",
     "-----|-----\n",
     "단계 1 | install and classpath\n",
