--- a/t_1_introTDD.ipynb
+++ b/t_1_introTDD.ipynb
@@ -30,7 +30,8 @@
     "\n",
     "### 1.1.3 문제\n",
     "\n",
-    "* 문제 1-1: 시스템을 만들지 않고 어떻게 테스트를 만들 수 있을까"
+    "* 문제 1-1: Red-Green-Refactor 단계에서 Red를 설명.\n",
+    "* 문제 1-2: TDD가 소프트웨어 설계라고 하는 의미를 설명."
    ]
   },
   {
@@ -238,7 +239,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.8 TDD?\n",
+    "### 1.8 TDD\n",
+    "\n",
+    "#### 왜 테스트를 해야 하는가\n",
     "\n",
     "* 실제 소프트웨어 개발에서 테스트는 무시되는 경향이 있다.\n",
     "    * 주먹구구식 개발. 개발부터 하고 본다.\n",
@@ -257,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Test First vs Test Last\n",
+    "#### Test First vs Test Last\n",
     "\n",
     "구분 | 설명\n",
     "-----|-----\n",
@@ -276,22 +279,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Red-Green-Refactor\n",
-    "    * 테스트 쓰고\n",
-    "    * 테스트를 실행\n",
-    "    * 실제 코딩\n",
-    "    * 테스트 실행\n",
-    "    * refactor\n",
-    "    * 테스트"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Appel, F., 2015, Testing with JUnit, Packt Publishing\n",
-    "Timeline 사례\n",
-    "https://github.com/fappel/Testing-with-JUnit"
+    "#### Red-Green-Refactor\n",
+    "\n",
+    "* 테스트 쓰고\n",
+    "* 테스트를 실행\n",
+    "* 실제 코딩\n",
+    "* 테스트 실행\n",
+    "* refactor\n",
+    "* 테스트"
    ]
   }
  ],
