--- a/t_1_introTDD.ipynb
+++ b/t_1_introTDD.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# 1. 소프트웨어 개발\n",
     "\n",
@@ -21,7 +25,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 1.1.1 목표\n",
     "\n",
@@ -36,7 +44,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 1.2 소프트웨어 개발이 어려워요...\n",
     "\n",
@@ -51,7 +63,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 전공은 하지만 코딩은 하기 싫다\n",
     "\n",
@@ -63,7 +79,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 우리나라의 컴퓨터 관련 직업 현실\n",
     "\n",
@@ -75,7 +95,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 그러나 미래는 밝다.\n",
     "\n",
@@ -88,7 +112,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 1.3 소프트웨어를 만드는 것이 왜 어려울까\n",
     "\n",
@@ -99,7 +127,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 1.3 왜 소프트웨어를 만들지..?\n",
     "\n",
@@ -114,14 +146,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### '지식'과 '열정' 사이... 'HOW' vs 'WHY'\n",
     "\n",
     "* 학교에서 '어떻게'는 배울 수 있다.\n",
     "* '왜'는 가르쳐 줄 수 없다.\n",
-    "* 내가 왜 이걸 배워야 할까...? 대답은 스스로 해야 한다.\n",
-    "* 열정 passionate enthusiastic motivated\n",
+    "* 내가 왜 이걸 배워야 할까...? 대답은 스스로 해야 한다. \n",
+    "* '만들고 싶은 소프트웨어가 있다' '재미있다' passionate enthusiastic motivated\n",
+    "* 열정은 어떻게 생겨나는 것일까\n",
     "    * '이것을 하겠다' 목적\n",
     "    * '해냈다' 성취\n",
     "    * '어떻게 하는지 알아' 적용\n",
@@ -135,7 +172,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 왜 만드는지는 알 수 있다고 해! '그렇지만... 내가 할 수 있을까...'\n",
     "\n",
@@ -148,7 +189,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 1.4 소프트웨어를 과학적으로 개발\n",
     "\n",
@@ -167,7 +212,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 1.5 소프트웨어를 더 잘 만드려면\n",
     "\n",
@@ -191,7 +240,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 1.6 소프트웨어 개발 방법\n",
     "\n",
@@ -209,7 +262,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "* '뜨는' 개발방법\n",
     "    * XP\n",
@@ -220,7 +277,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 1.7 Software Development Life Cycle\n",
     "\n",
@@ -237,7 +298,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### 1.8 TDD\n",
     "\n",
@@ -258,7 +323,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "#### Test First vs Test Last\n",
     "\n",
@@ -277,7 +346,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "#### Red-Green-Refactor\n",
     "\n",
@@ -291,6 +364,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
