--- a/j_1_hello_jshell.ipynb
+++ b/j_1_hello_jshell.ipynb
@@ -26,11 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "## 1.2 REPL\n",
     "\n",
@@ -41,8 +37,17 @@
     "온라인에서 jshell을 사용할 수 있는 사이트는 많지 않다. Java 9을 지원하는 사이트는 아래와 같다. 그러나 '/classes', '/classpath'와 같은 일부 명령어는 지원하지 않는다.\n",
     "* Java 9 지원 http://www.jshell-online.com/\n",
     "* Java 8 지원 http://www.javarepl.com/term.html\n",
-    "* Java 8 지원 https://repl.it/languages\n",
-    "\n",
+    "* Java 8 지원 https://repl.it/languages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "jshell의 사용사례는:\n",
     "* 간단한 클래스를 만들고 테스트할 경우에 사용할 수 있다. 단, 'public'은 지원하지 않는다.\n",
     "* 말 그대로 shell 방식으로 프로토타잎을 빠르게 테스트할 수 있다. 예를 들어, ArrayList, Stream, File 등 API를 간편하게 테스트할 수 있다. 어느 정도 완성이 되면 클래스를 만들 때 복사해서 활용할 수 있다.\n",
@@ -126,7 +131,10 @@
     }
    },
    "source": [
-    "## 문제 1-1: 숫자 1, 2를 더해 보기"
+    "## 문제 1-1: 숫자 1, 2를 더해 보기\n",
+    "\n",
+    "앞서 설명한 바와 같이, 자바는 컴파일을 하지 않고서는 이런 간단한 문제도 풀 수 없다.\n",
+    "jshell을 사용하면 프로그래밍이 간편해 진다. 컴파일을 하지 않고 결과를 볼 수 있다."
    ]
   },
   {
